--- a/view/src/main/resources/views/engine/engineView.fxml
+++ b/view/src/main/resources/views/engine/engineView.fxml
@@ -15,7 +15,7 @@
         <VBox fx:id="engineCanvasHolder"
               style=" -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;"/>
         <VBox fx:id="canvasSelector"
-              style=" -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;"></VBox>
+              style=" -fx-border-color:black; -fx-border-width: 1; -fx-border-style: solid;"/>
     </HBox>
 
 
